--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,7 @@
 html {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 .main-content {
@@ -26,6 +27,8 @@ html {
 
 .image-container img {
   display: block;
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -225,6 +228,7 @@ header .mobile {
   justify-content: space-between;
   padding: 4rem 5%;
   background-color: #f3f3f3;
+  flex-wrap: wrap;
 }
 
 .feature {
@@ -239,7 +243,10 @@ header .mobile {
   height: 65%;
   margin: 0 auto;
 }
-
+.feature .content {
+  height: 9.687rem;
+  padding-top: 2.5rem;
+}
 .feature h2 {
   padding-bottom: .5rem;
   font-size: 2.25rem;
